# agmem

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
.agmem/: _ask_session.json  eval-pairs.json
.claude/: settings.local.json
.claude/worktrees/claude-md-agmem-edit/: CLAUDE.md  README.md
.claude/worktrees/claude-md-agmem-edit/.agmem/: _ask_session.json  _hot.md  config.yaml  memories.jsonl
.claude/worktrees/claude-md-agmem-edit/.claude/: settings.local.json
.claude/worktrees/claude-md-agmem-edit/.claude/commands/: recall.md
.claude/worktrees/claude-md-agmem-edit/scripts/exp/: exp-finish-b.sh
.claude/worktrees/claude-md-agmem-edit/src/agmem/: agmem_eval.py  (+8 more)
.claude/worktrees/claude-md-agmem-edit/tests/: test_aliases.py  test_aliases_user.py  test_ask.py  test_cli.py  test_content_analyzer.py  test_forget_verify.py  test_go_parser.py  test_hook.py  test_hot.py  test_indexer.py  test_indexer_md_split.py  test_performance.py  test_stats.py  test_testq.py  test_verify_follow.py
benchmark/longmemeval/: .gitignore  README.md  adapter.py  download.py  run.py
scripts/: sync-to-hetzner.sh
scripts/exp/: _common.sh  exp-finish-a.sh  exp-prepare.sh
src/agmem/: __init__.py  ask.py  cli.py  config.py  content_analyzer.py  hook.py  indexer.py  review.py  search.py  stats.py  store.py  watch.py
src/agmem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agmem/parsers/: __init__.py  glossary.py  go.py  tf.py  types.py
tests/: test_agmem_eval.py  test_ask.py  test_claude_integration.py  test_cli.py  test_content_analyzer.py  test_glossary.py  test_md_parser.py  test_mmr.py  test_provenance.py  test_py_parser.py  test_render_kinds.py  test_repo_root.py  test_review.py  test_search.py  test_store.py  test_update.py  test_watch.py
(+5 files in other folders)
